# 2048SFML

./: CMakeLists.txt  Game.cpp  Game.h  README.md  Renderer.cpp  Renderer.h  main.cpp
